2002-07-28  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* configure.in: Bump version to 1.6b.
	* lib/config.guess, lib/config.sub, lib/Automake/XFile.pm: New
	upstream versions.
	* automake.in: Don't write @ALLOCA@ and @LIBOBJS@ in clear text,
	since this file is processed by config.status.

2002-07-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (read_am_file): Escaped newlines in comments are not
	portable.  If a comment line doesn't start with a `#', add it.
	* tests/comment6.test: Ensure this is done.

2002-07-24  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix failures reported by Patrick Welche on NetBSD.
	* tests/gnits2.test, tests/gnits3.test: Don't trust the exit
	status of `make -k'.
	* tests/obsolete.test: Source obs.1 and obs.2 from current
	directory.

2002-07-23  Patrick Welche  <prlw1@newn.cam.ac.uk>

	* lib/am/configure.am (am__CONFIG_DISTCLEAN_FILES): Add
	configure.lineno.

2002-07-23  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/required2.test: New file.
	* tests/Makefile.am (TESTS): Add required2.test.
	* automake.in (initialize_per_input): Remove %require_file_found
	setting.  This reverts my change of 2002-04-19.
	(require_file_internal): Use the full name of a file as a
	key in %require_file_found, not only the basename.
	Reported by Andrew Suffield.

2002-07-22  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (handle_subdirs): Warn if `obj' appears in SUBDIRS.
	* tests/subdir7.test: New file.
	* tests/Makefile.am (TESTS): Add subdir7.test.

	* lib/mkinstalldirs: Remove Id keyword.

	* lib/am/progs.am (installcheck-%DIR%PROGRAMS): Honor
	AM_INSTALLCHECK_STD_OPTIONS_EXEMPT.
	* lib/am/scripts.am (installcheck-%DIR%SCRIPTS): Likewise.
	* automake.texi (Options) <std-options>: Document
	AM_INSTALLCHECK_STD_OPTIONS_EXEMPT.
	(Gnits): Reference std-options.
	* tests/gnits3.test: New file.
	* tests/Makefile.am (TESTS): Add gnits3.test.
	Suggested by Jim Meyering.

2002-07-20  Alexandre Duret-Lutz  <duret_g@epita.fr>
