@@ -19,7 +19,7 @@
 # 02111-1307, USA.
 
 AC_PREREQ(2.52b)
-AC_INIT([GNU Automake], [1.6b], [bug-automake@gnu.org])
+AC_INIT([GNU Automake], [1.6c], [bug-automake@gnu.org])
 
 AC_CONFIG_SRCDIR(automake.in)
 AC_CONFIG_AUX_DIR(lib)
