@@ -1,4 +1,4 @@
 @set UPDATED 21 July 2002
 @set UPDATED-MONTH July 2002
-@set EDITION 1.6b
-@set VERSION 1.6b
+@set EDITION 1.6c
+@set VERSION 1.6c
