@@ -1,5 +1,7 @@
 2002-07-28  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* configure.in: Bump version to 1.6c.
+
 	* configure.in: Bump version to 1.6b.
 	* lib/config.guess, lib/config.sub, lib/Automake/XFile.pm: New
 	upstream versions.
